--- a/gridiron.css
+++ b/gridiron.css
@@ -26,7 +26,7 @@ a {cursor:pointer;} p{line-height:1.5em;}
 .row:before,
 .row:after {content:""; display:table; clear:both;}
 .-inline {display:inline-block;}
-.center-block{margin:0 auto;}/**(will possibly need to specify width - see website for example) for centering block-level HTML elements ***/
+.center-block{ margin:0 auto; text-align:center;}/**(will possibly need to specify width - see website for example) for centering block-level HTML elements ***/
 .center-inline{display:block; margin:0 auto;} /** for centering inline-level HTML elements ***/
 .lorem-text, .lorem-text:before{
 	content:"Morbi ultrices tellus eu massa blandit, vitae pretium leo pulvinar. Integer vel tempor justo. Nunc congue pretium urna, eu rutrum arcu vehicula nec. Vivamus ultrices pulvinar libero, vitae tincidunt ipsum varius eget. In eget dui id tortor facilisis pharetra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean lectus quam, porta eget pharetra non, condimentum vel ligula. ";
