--- a/gridiron.css
+++ b/gridiron.css
@@ -1,15 +1,15 @@
 /*  **
   * www.neuetab.com
+  * Author: Errol Thomas
   * Licensed under MIT <--- https://github.com/thomase718/Gridiron/blob/master/LICENSE --->
   * Two ways to apply columns in this grid-container
-	1. Use "col-#-sz" if you want to set evenly defined columns (e.g. col-6-m)
-	2. Use "col-size-#" if you want to span content across specified amount of columns (e.g. col-md-6)
-		a. Use the class .row for a div containing the content that is columnized. 
-						<div class="row">
-							<div class="col-6-lg col-2-m col-1-s"></div>  (multiple breakpoints for responsiveness)
-						</div>
+	1. For fixed width columns use name designation i.e 
+	(third-s) means 3 columns on small screen, 
+	(quarter-lg) means 4 columns on large screen, etc etc.
+	2. For spreading content across any amount of columns the "across" designation:
+	(.across-7-m) means spread content across 7 columns on medium-sized screens 
  */
- /*reset style*/
+/*reset style*/
 *
 {margin:0; padding:0; border:0; outline:none; list-style-type:none; text-decoration:none;  
  -webkit-box-sizing: border-box;
@@ -26,123 +26,107 @@ a {cursor:pointer;} p{line-height:1.5em;}
 .row:before,
 .row:after {content:""; display:table; clear:both;}
 .-inline {display:inline-block;}
-.center-block{ margin:0 auto; text-align:center;}/**(will possibly need to specify width - see website for example) for centering block-level HTML elements ***/
-.center-inline{display:block; margin:0 auto;} /** for centering inline-level HTML elements ***/
+/** may need to specify a width afor centering block-level HTML elements ***/
+.center-block{ margin:0 auto; text-align:center;}
+/** for centering inline-level HTML elements ***/
+.center-inline{display:block; margin:0 auto;} 
 .lorem-text, .lorem-text:before{
 	content:"Morbi ultrices tellus eu massa blandit, vitae pretium leo pulvinar. Integer vel tempor justo. Nunc congue pretium urna, eu rutrum arcu vehicula nec. Vivamus ultrices pulvinar libero, vitae tincidunt ipsum varius eget. In eget dui id tortor facilisis pharetra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean lectus quam, porta eget pharetra non, condimentum vel ligula. ";
 	line-height:1.5em;
 	font-size:1.3em;
 	font-family:Source Sans Pro;
-	
 }
-.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12{
-	float:left;
-}
-.col-1{width:100%;}
-.col-2{ width:50%;}
-.col-3{ width:33.33%;}
-.col-4{ width:25%;}
-.col-5{ width:20%;}
-.col-6{ width:16.66%;}
-.col-7{ width:14.2857%;}
-.col-8{ width:12.5%;}
-.col-9{ width:11.11%;}
-.col-10{ width:10%;}
-.col-11{ width:9.09%;}
-.col-12{ width:8.33%;}
-
 @media all and (min-width: 18em){/*mobile phone styles 300px and up*/
-.col-1-s, .col-2-s, .col-3-s, .col-4-s, .col-5-s, .col-6-s, .col-7-s, .col-8-s .col-9-s, .col-10-s, .col-11-s, .col-12-s, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12{
+.full-width-s, .half-width-s, .third-s, .quarter-s, .fifth-s, .sixth-s, .seventh-s, .eighth-s, .nineth-s, .tenth-s, .eleventh-s, .twelfth-s, .across-1-s, .across-2-s, .across-3-s, .across-4-s, .across-5-s, .across-6-s, .across-7-s, .across-8-s, .across-9-s, .across-10-s, .across-11-s, .across-12-s{
 	float:left;
-	padding:0 1em; margin: .5em 0;
+	padding:0 .5em; margin: .5em 0;
 }
-.col-1-s{width:100%;}
-.col-2-s{ width:50%;}
-.col-3-s{ width:33.33%;}
-.col-4-s{ width:25%;}
-.col-5-s{ width:20%;}
-.col-6-s{ width:16.66%;}
-.col-7-s{ width:14.2857%;}
-.col-8-s{ width:12.5%;}
-.col-9-s{ width:11.11%;}
-.col-10-s{ width:10%;}
-.col-11-s{ width:9.09%;}
-.col-12-s{ width:8.33%;} 
+.full-width-s{width:100%;}
+.half-width-s{ width:50%;}
+.third-s{ width:33.33%;}
+.quarter-s{ width:25%;}
+.fifth-s{ width:20%;}
+.sixth-s{ width:16.66%;}
+.seventh-s{ width:14.2857%;}
+.eighth-s{ width:12.5%;}
+.nineth-s{ width:11.11%;}
+.tenth-s{ width:10%;}
+.eleventh-s{ width:9.09%;}
+.twelfth-s{ width:8.33%;} 
 /*to spread content across columns */
-.col-sm-12 {width: 100%;}
-.col-sm-11 {width: 91.66666667%;}
-.col-sm-10 {width: 83.33333333%;}
-.col-sm-9 {width: 75%;}
-.col-sm-8 {width: 66.66666667%;}
-.col-sm-7 {width: 58.33333333%;}
-.col-sm-6 {width: 50%;}
-.col-sm-5 {width: 41.66666667%;}
-.col-sm-4 {width: 33.33333333%;}
-.col-sm-3 {width: 25%;}
-.col-sm-2 {width: 16.66666667%;}
-.col-sm-1 {width: 8.33333333%;}
+.across-12-s {width: 100%;}
+.across-11-s {width: 91.66666667%;}
+.across-10-s {width: 83.33333333%;}
+.across-9-s {width: 75%;}
+.across-8-s {width: 66.66666667%;}
+.across-7-s {width: 58.33333333%;}
+.across-6-s {width: 50%;}
+.across-5-s {width: 41.66666667%;}
+.across-4-s {width: 33.33333333%;}
+.across-3-s {width: 25%;}
+.across-2-s {width: 16.66666667%;}
+.across-1-s {width: 8.33333333%;}
 }
 @media all and (min-width: 48em){/*tablet styles =768px*/
- .col-1-m, .col-2-m, .col-3-m, .col-4-m, .col-5-m .col-6-m, .col-7-m, .col-8-m, .col-9-m, .col-10-m, .col-11-m, .col-12-m, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12{
-float:left;
-padding:0 .5em; 
-}
-.col-1-m{width:100%;}
-.col-2-m{ width:50%;}
-.col-3-m{ width:33.33%;}
-.col-4-m{ width:25%;}
-.col-5-m{ width:20%;}
-.col-6-m{ width:16.66%;}
-.col-7-m{ width:14.2857%;}
-.col-8-m{ width:12.5%;}
-.col-9-m{ width:11.11%;}
-.col-10-m{ width:10%;}
-.col-11-m{ width:9.09%;}
-.col-12-m{ width:8.33%;} 
-/*to spread content across columns */
-.col-md-12 {width: 100%;}
-.col-md-11 {width: 91.66666667%;}
-.col-md-10 {width: 83.33333333%;}
-.col-md-9 {width: 75%;}
-.col-md-8 {width: 66.66666667%;}
-.col-md-7 {width: 58.33333333%;}
-.col-md-6 {width: 50%;}
-.col-md-5 {width: 41.66666667%;}
-.col-md-4 {width: 33.33333333%;}
-.col-md-3 {width: 25%;}
-.col-md-2 {width: 16.66666667%;}
-.col-md-1 {width: 8.33333333%;}
-}
-@media all and (min-width: 70em){/*all other and higher 1120px+ */
- .col-1-lg,.col-2-lg, .col-3-lg, .col-4-lg, .col-5-lg, .col-6-lg, .col-7-lg, .col-8-lg, .col-9-lg, .col-10-lg, .col-11-lg, .col-12-lg, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12{
+.full-width-m, .half-width-m, .third-m, .quarter-m, .fifth-m, .sixth-m, .seventh-m, .eighth-m, .nineth-m, .tenth-m, .eleventh-m, .twelfth-m, .across-1-m, .across-2-m, .across-3-m, .across-4-m, .across-5-m, .across-6-m, .across-7-m, .across-8-m, .across-9-m, .across-10-m, .across-11-m, .across-12-m{
 	float:left;
-	padding:0 .5em; 
+	padding:0 .5em; margin: .5em 0;
 }
-.col-1-lg{width:100%;}
-.col-2-lg{ width:50%;}
-.col-3-lg{ width:33.33%;}
-.col-4-lg{ width:25%;}
-.col-5-lg{ width:20%;}
-.col-6-lg{ width:16.66%;}
-.col-7-lg{ width:14.2857%;}
-.col-8-lg{ width:12.5%;}
-.col-9-lg{ width:11.11%;}
-.col-10-lg{ width:10%;}
-.col-11-lg{ width:9.09%;}
-.col-12-lg{ width:8.33%;} 
+.full-width-m{width:100%;}
+.half-width-m{ width:50%;}
+.third-m{ width:33.33%;}
+.quarter-m{ width:25%;}
+.fifth-m{ width:20%;}
+.sixth-m{ width:16.66%;}
+.seventh-m{ width:14.2857%;}
+.eighth-m{ width:12.5%;}
+.nineth-m{ width:11.11%;}
+.tenth-m{ width:10%;}
+.eleventh-m{ width:9.09%;}
+.twelfth-m{ width:8.33%;} 
 /*to spread content across columns */
-.col-lg-12 {width: 100%;}
-.col-lg-11 {width: 91.66666667%;}
-.col-lg-10 {width: 83.33333333%;}
-.col-lg-9 {width: 75%;}
-.col-lg-8 {width: 66.66666667%;}
-.col-lg-7 {width: 58.33333333%;}
-.col-lg-6 {width: 50%;}
-.col-lg-5 {width: 41.66666667%;}
-.col-lg-4 {width: 33.33333333%;}
-.col-lg-3 {width: 25%;}
-.col-lg-2 {width: 16.66666667%;}
-.col-lg-1 {width: 8.33333333%;}
+.across-12-m {width: 100%;}
+.across-11-m {width: 91.66666667%;}
+.across-10-m {width: 83.33333333%;}
+.across-9-m {width: 75%;}
+.across-8-m {width: 66.66666667%;}
+.across-7-m {width: 58.33333333%;}
+.across-6-m {width: 50%;}
+.across-5-m {width: 41.66666667%;}
+.across-4-m {width: 33.33333333%;}
+.across-3-m {width: 25%;}
+.across-2-m {width: 16.66666667%;}
+.across-1-m {width: 8.33333333%;}
+@media all and (min-width: 70em){/*all other and higher 1120px+ */
+.full-width-lg, .half-width-lg, .third-lg, .quarter-lg, .fifth-lg, .sixth-lg, .seventh-lg, .eighth-lg, .nineth-lg, .tenth-lg, .eleventh-lg, .twelfth-lg, .across-1-lg, .across-2-lg, .across-3-lg, .across-4-lg, .across-5-lg, .across-6-lg, .across-7-lg, .across-8-lg, .across-9-lg, .across-10-lg, .across-11-lg, .across-12-lg{
+	float:left;
+	padding:0 .5em; margin: .5em 0;
+}
+.full-width-lg{width:100%;}
+.half-width-lg{ width:50%;}
+.third-lg{ width:33.33%;}
+.quarter-lg{ width:25%;}
+.fifth-lg{ width:20%;}
+.sixth-lg{ width:16.66%;}
+.seventh-lg{ width:14.2857%;}
+.eighth-lg{ width:12.5%;}
+.nineth-lg{ width:11.11%;}
+.tenth-lg{ width:10%;}
+.eleventh-lg{ width:9.09%;}
+.twelfth-lg{ width:8.33%;} 
+/*to spread content across columns */
+.across-12-lg {width: 100%;}
+.across-11-lg {width: 91.66666667%;}
+.across-10-lg {width: 83.33333333%;}
+.across-9-lg {width: 75%;}
+.across-8-lg {width: 66.66666667%;}
+.across-7-lg {width: 58.33333333%;}
+.across-6-lg {width: 50%;}
+.across-5-lg {width: 41.66666667%;}
+.across-4-lg {width: 33.33333333%;}
+.across-3-lg {width: 25%;}
+.across-2-lg {width: 16.66666667%;}
+.across-1-lg {width: 8.33333333%;}
 }
 /*classes to hide/show content on specific devices/screen sizes**/	
 @media all and (min-width: 18em) and (max-width:47.9em){
