V.3 Gridiron CSS- Updated class naming convention

--- a/gridiron.css
+++ b/gridiron.css
@@ -1,6 +1,6 @@
 /*  **
   * www.neuetab.com
-  * Author: Errol Thomas
+  * Created by: Errol Thomas
   * Licensed under MIT <--- https://github.com/thomase718/Gridiron/blob/master/LICENSE --->
   * Two ways to apply columns in this grid-container
 	1. For fixed width columns use name designation i.e 
